[tool.poetry]
name = "term-papers-3"
version = "0.1.0"
description = ""
authors = ["Shebelnitskii <Shebelnitskiywork@gmail.com>"]
readme = "README.md"
packages = [{include = "term_papers_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
coverage = "^7.2.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
coverage = "^7.2.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
